[package]
name = "bliss"
readme = "README.md"
repository = "https://github.com/ajmwagar/bliss"
description = "Ignorance is bliss! Ignore your .gitignore"
license = "MIT"
version = "0.1.1"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.16"
# rayon = "*"
dirs = "1.0"
clap = "2.33.0"
